--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,10 +7,39 @@ on:
   workflow_dispatch:
 
 jobs:
-  deploy-infra:
+  code-analysis:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout code
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r ./infra/requirements/requirements.txt
+
+      - name: Run SonarCloud Analysis
+        uses: SonarSource/sonarcloud-github-action@master
+        with:
+          projectBaseDir: ./app
+          args: >
+            -Dsonar.organization=${{ secrets.SONAR_ORG }}
+            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
+            -Dsonar.python.version=3
+            -Dsonar.sources=.
+            -Dsonar.host.url=https://sonarcloud.io
+            -Dsonar.token=${{ secrets.SONAR_TOKEN }}
+
+  deploy-infra:
+    runs-on: ubuntu-latest
+    needs: code-analysis
+    steps:
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Configure AWS Credentials
@@ -21,23 +50,23 @@ jobs:
           aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
           aws-region: us-east-1
 
-      - name: set up terraform
+      - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.6.1
 
-      - name: init
+      - name: Init
         run: terraform init
         working-directory: './infra/'
 
-      - name: validate
+      - name: Validate
         run: terraform validate
         working-directory: './infra/'
 
-      - name: plan
+      - name: Plan
         run: terraform plan
         working-directory: './infra/'
 
-      - name: apply
+      - name: Apply
         run: terraform apply -auto-approve
         working-directory: './infra/'
