--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,9 +31,11 @@ jobs:
             -Dsonar.organization=${{ secrets.SONAR_ORG }}
             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
             -Dsonar.python.version=3
-            -Dsonar.sources=.
             -Dsonar.host.url=https://sonarcloud.io
             -Dsonar.token=${{ secrets.SONAR_TOKEN }}
+            -Dsonar.sources=app/src
+            -Dsonar.tests=app/test
+            -Dsonar.test.inclusions=**/test_*.py
 
   deploy-infra:
     runs-on: ubuntu-latest
