--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
             -Dsonar.python.version=3
             -Dsonar.host.url=https://sonarcloud.io
             -Dsonar.token=${{ secrets.SONAR_TOKEN }}
-            -Dsonar.sources=app/src
+            -Dsonar.sources=src
             -Dsonar.tests=tests
             -Dsonar.test.inclusions=**/test_*.py
 
