--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r ./infra/requirements/requirements.txt
+          pip install -r requirements.txt
 
       - name: Run SonarCloud Analysis
         uses: SonarSource/sonarcloud-github-action@master
