--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r ./infra/requirements/requirements.txt
 
       - name: Run SonarCloud Analysis
         uses: SonarSource/sonarcloud-github-action@master
@@ -36,6 +36,7 @@ jobs:
             -Dsonar.sources=src
             -Dsonar.tests=tests
             -Dsonar.verbose=true
+            -sonar.python.coverage.reportPaths=coverage.xml
 
   deploy-infra:
     runs-on: ubuntu-latest
